Bring the Java and C# implementations into sync.
This provides a consistent run between the two language versions. It clearly shows that the Java implementation runs at ten times the speed of the C# implementation, despite both being virtually identical.